fixed issue with #root being visible on homepage

--- a/frontend/src/components/homepage/Homepage.css
+++ b/frontend/src/components/homepage/Homepage.css
@@ -3,13 +3,13 @@
   grid-template-rows: auto auto 1fr auto;
   justify-items: center;
   align-items: center;
-  /* height: 2500px; */
+  height: 2700px;
   overflow: hidden;
   background-color: #E3E6E6;
 }
 
 .homeBannerContainer {
-  width: 90%;
+  width: 95%;
   height: 900px;
   z-index: 1;
   background: linear-gradient(to bottom, #EC9E91 65%, #E3E6E6 100%);
@@ -25,7 +25,7 @@
 
 .homepageMain {
   position: relative;
-  top: -250px;
+  top: -320px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,8 +38,6 @@
 
 
 
-
-/* 
 
 @media (max-width: 768px) {
   .homepageMain {
@@ -70,4 +68,4 @@
     width: 80%;
     margin: 0 auto;
   }
-} */
+}
