--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,5 +21,6 @@ body {
   flex-wrap: wrap;
   margin: auto;
   position: relative;
-  overflow-x: hidden;
+  min-height: 100vh;
+
 }
